	* Release v1 alpha 4
	* More cmake file condensing
	* Fixed comparison bug in FalconGripFourButton
	* Added CPU specific optimizations for option for GCC builds
	* Added Fast Math optimization option for GCC >= 4.0
	* Added (but commented out) packet buffering scheme for firmware
	* Fixed bug with returning grip info data portion from novint firmware object
2008-10-11 Kyle Machulis <kyle@nonpolynomial.com>
	* Release v1 alpha 3
	* Overhauled cmake files to make building cleaner
	* Renamed c libraries to libnifalcon_c
	* Renamed c++ libraries to libnifalcon
	* Added Findlibnifalcon cmake module
	* Added GMTL to source distribution
	* Folded Stamper kinematics functionality into main library
2008-10-05 Kyle Machulis <kyle@nonpolynomial.com>
	* Release v1 alpha 2
	* Added beginnings of HDL compatibility libraries
	* Added novint license since libnifalcon includes SDK code and firmware, which is covered under their license
	* Added FindBoost cmake module from CMake 2.6.2.
	* Fixed findfalcons_cpp demo compiling and double deletion bug
2008-09-20 Kyle Machulis <kyle@nonpolynomial.com>
	* Release v1 alpha 1
	* Changed license to BSD
	* Added new C++ based libnifalcon library
	* Added kinematics classes by Kevin Ouellet
	* Removed OpenGL examples for the moment
	* Removed C based kinematics classes until they are corrected
2008-08-20 Kyle Machulis <kyle@nonpolynomial.com>
	* Release v0.5
	* Fixed firmware initialization race condition that caused various loading issues
	* Added check to see if firmware is already on the falcon
	* Changed findfalcons output to make it slightly more usable
	* Added more error reporting to test firmware
2008-07-15 Kyle Machulis <kyle@nonpolynomial.com>	
	* Release v0.4
	* Removed stray "_s" extensions in CMake files
2008-05-26 Kyle Machulis <kyle@nonpolynomial.com>
	* Release v0.3
	* Fixed libftdi latency timer sets, library now runs much faster on Linux and OS X