@@ -4,18 +4,15 @@ SET(CPP_LINK_LIBS ${LIBNIFALCON_CPP})
 IF(LIBFTDI_FOUND)
   SET(CPP_DEFINES ${CPP_DEFINES} -DLIBFTDI)
   SET(CPP_LINK_LIBS ${CPP_LINK_LIBS} ${LIBNIFALCON_CPP_COMM_PREFIX}_libftdi ${LIBFTDI_LIBRARIES}) 
-ENDIF(LIBFTDI_FOUND)
-
-IF(LIBFTD2XX_FOUND)
+ELSEIF(LIBFTD2XX_FOUND)
   SET(CPP_DEFINES ${CPP_DEFINES} -DLIBFTD2XX)
   SET(CPP_LINK_LIBS ${CPP_LINK_LIBS} ${LIBNIFALCON_CPP_COMM_PREFIX}_ftd2xx ${LIBFTD2XX_LIBRARIES})
-ENDIF(LIBFTD2XX_FOUND)
+ENDIF(LIBFTDI_FOUND)
 
 ADD_SUBDIRECTORY(findfalcons)
 ADD_SUBDIRECTORY(findfalcons_cpp)
 IF(Boost_PROGRAM_OPTIONS_FOUND)
   ADD_SUBDIRECTORY(falcon_test_cli)
-#  ADD_SUBDIRECTORY(falcon_light)
 ELSE(Boost_PROGRAM_OPTIONS_FOUND)
   MESSAGE("Cannot compile falcon_test_cli - Missing Boost Program Options")
 ENDIF(Boost_PROGRAM_OPTIONS_FOUND)
