@@ -3,7 +3,11 @@ SET(NIF_LINK_FLAGS)
 
 IF(LIBFTDI_FOUND)
   INSTALL(FILES FalconCommLibFTDI.h DESTINATION ${INCLUDE_INSTALL_DIR}/falcon/comm)
-  BUILD_NIFALCON_LIB(${LIBNIFALCON_CPP_COMM_PREFIX}_libftdi "${BUILD_TYPES}" "FalconCommLibFTDI.cpp" "${LIBFTDI_LIBRARIES}" FALSE)
+  SET(DEBUG_DEFINES FALSE)
+  IF(LIBUSB_DEBUG)
+	SET(DEBUG_DEFINES "-DLIBUSB_DEBUG")
+  ENDIF(LIBUSB_DEBUG)
+  BUILD_NIFALCON_LIB(${LIBNIFALCON_CPP_COMM_PREFIX}_libftdi "${BUILD_TYPES}" "FalconCommLibFTDI.cpp" "${LIBFTDI_LIBRARIES}" ${DEBUG_DEFINES})
 ENDIF(LIBFTDI_FOUND)
 
 IF(LIBFTD2XX_FOUND)
